# SkylakeLib

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  GenerateProjectFiles_WIN32_ClangCL.bat  GenerateProjectFiles_WIN32_MSVC.bat  README.md  UnrealEngineModuleExample.cs
.github/workflows/: cmake.yml
SkylakeDatacenterLib/: CMakeLists.txt
SkylakeDatacenterLib/Builder/Private/: SkylakeDatacenterAdapter.cpp  SkylakeDatacenterBuilder.cpp  SkylakeDatacenterXMLAdapter.cpp
SkylakeDatacenterLib/Builder/Public/: SkylakeDatacenterAdapter.h  SkylakeDatacenterBuilder.h  SkylakeDatacenterXMLAdapter.h
SkylakeDatacenterLib/BuilderApp/: BuilderApp.h
SkylakeDatacenterLib/BuilderLib/Private/: SkylakeDatacenterAdapter.cpp  SkylakeDatacenterBuilder.cpp  SkylakeDatacenterXMLAdapter.cpp
SkylakeDatacenterLib/BuilderLib/Public/: SkylakeDatacenterAdapter.h  SkylakeDatacenterBuilder.h  SkylakeDatacenterXMLAdapter.h
SkylakeDatacenterLib/Internal/: Structure.h
SkylakeDatacenterLib/Private/: SkylakeDatacenter.cpp
SkylakeDatacenterLib/Public/: SkylakeDatacenter.h
SkylakeLib/: CMakeLists.txt  Flags.h  Heading.h  SkylakeLib.cpp  SkylakeLib.h
SkylakeLib/AOD/: AOD.h  AOD_Object.cpp  AOD_Object.h  AOD_Queue.h  AOD_TLS.cpp  AOD_TLS.h  AOD_Task.h
SkylakeLib/Application/: Application.h  ServerInstance.cpp  ServerInstance.h  ServerInstanceConfig.h  ServerInstanceTLSContext.cpp  ServerInstanceTLSContext.h
SkylakeLib/Diagnostics/: Log.h
SkylakeLib/ECS/: DODSymmetricStore.h  ECS.h  EntityId.h  EntityStore.h  MultiArray.h  UIDStore.h
SkylakeLib/Math/: Math.cpp  Math.h  MathEIS.h  SAngle.h  SMath.cpp  SMath.h  SMathTemplates.h  SMathUtils.h
SkylakeLib/Measurements/: Counters.h  KPI.h  Measurements.cpp  Measurements.h
SkylakeLib/Memory/: AllocationStrategies.h  GlobalMemoryManagement.h  LocalMemoryManager.h  LocalObjectPool.h  Memory.h  MemoryManagement.h  MemoryPolicy.h  ObjectPool.h  STLAllocator.h  SharedPointer.h  StaticObjectPool.h  ThreadMemoryManagement.h
SkylakeLib/MiMalloc/: CMakeLists.txt
SkylakeLib/MiMalloc/include/: mimalloc.h
SkylakeLib/MiMalloc/src/: alloc.c  os.c
SkylakeLib/Networking/: AsyncIOBuffer.h  Networking.cpp  Networking.h
SkylakeLib/Platform/: Platform.h  Platform_Windows.cpp  Platform_Windows.h  TCPAsyncAccepter.h  TLSValue.h
SkylakeLib/Port/: AsyncIO.h  Port.h  Port_FreeBSD.h  Port_Windows.cpp  Port_Windows.h  TCPAsyncAccepter.h  TLSSingleton.h  TLSValue.h
SkylakeLib/Service/: AODService.h  ActiveService.h  Service.h  SimpleService.h  WorkerService.h
SkylakeLib/Std/: AtomicValue.h  Std.h  StdDependencies.h
SkylakeLib/TLSSync/: TLSSync.h  TLSSyncQueue.h  TLSSyncSystem.h  TLSSyncTask.h
SkylakeLib/Task/: IOTask.h  Task.cpp  Task.h  TaskQueue.h
SkylakeLib/ThreadLocalStorage/: TLS.h  TLSSingleton.h  TLSValue.h
SkylakeLib/Threading/: Threading.h  Worker.cpp  Worker.h  WorkerGroup.cpp  WorkerGroup.h  WorkerGroupManager.cpp  WorkerGroupManager.h  WorkerGroupRunVariants.h
SkylakeLib/Tuning/: Tuning.h
SkylakeLib/Utils/: BinaryStream.cpp  BinaryStream.h  BufferStream.h  Logger.cpp  Logger.h  SGUID.h  SRand.cpp  SRand.h  SpinLock.h  StringUtils.cpp  StringUtils.h
SkylakeLibDB/: CMakeLists.txt
SkylakeLibDB/Private/: DBConnection.h  DBConnectionFactory.h  DBStatement.cpp  DBStatement.h  DBStatementField.h  DBStaticStatement.h  DBString.h  DBTime.h  SkylakeLibDB.cpp
SkylakeLibDB/Public/: SkylakeLibDB.h
SkylakeLibDB/include/: DBConnection.h  DBConnectionFactory.h  DBStatement.h  DBString.h  SkylakeLibDB.h
SkylakeLibDB/mysqlclient/: CMakeLists.txt
SkylakeLibDB/src/: DBStatement.cpp  SkylakeLibDB.cpp
SkylakeLibHeaderOnly/: CMakeLists.txt
SkylakeLibHeaderOnly/Interface/: SkylakeLibHeaderOnly.h
SkylakeLibHeaderOnly/Static_Dev/: ASDForward.h  AdvancedSingleDispatch.h  AtomicValue.h  Concepts.h  EntityId.h  Flags.h  Logger.h  Macros.h  Packet.h  PacketBuilder.h  RStatus.h  SkylakeAssert.h  SkylakeLibHeaderOnly.h  SkylakeLibHeaderOnly_Empty.cpp  SkylakeLibTypes.h  Std.h  Stream.h  Types.h  magic_enum_ex.h
SkylakeLibProtocol/: CMakeLists.txt
SkylakeLibProtocol/include/: Packet.h  PacketBuilder.h  Shared.h  SkylakeLibProtocol.h
SkylakeLibProtocol/src/: SkylakeLibProtocol.cpp
SkylakeLibStandalone/: CMakeLists.txt  SkylakeLibStandalone.cpp  SkylakeLibStandalone.h
SkylakeLibStandalone/Diagnostics/: Log.h
SkylakeLibStandalone/ECS/: DODSymmetricStore.h  ECS.h  MultiArray.h  UIDStore.h
SkylakeLibStandalone/Std/: Std.h  StdDependencies.h
SkylakeLibStandalone/Tuning/: Tuning.h
SkylakeLibStandalone/Utils/: SRand.cpp  SRand.h  SpinLock.h  StringUtils.h
tests/: CMakeLists.txt  CMakeLists.txt.bak
tests/AODQueueTests/: CMakeLists.txt  main.cpp
tests/AODTests/: CMakeLists.txt  main.cpp
tests/AsyncIOTests/: CMakeLists.txt  main.cpp
tests/DBTests/: CMakeLists.txt  main.cpp
tests/DatacenterTests/: CMakeLists.txt  main.cpp
tests/DatacenterTests/data/xml/: ClientSettings.xml
tests/DatacenterTests/data/xml/Continent/: Continent_Map_Game_01.xml
tests/DatacenterTests/data/xml/Item/: AbnormalityTemplates.xml  ItemCombinationTemplates.xml  ItemDisenchantTemplates.xml  ItemTemplates.xml  PassivityTemplates.xml
tests/DatacenterTests/data/xml/StrSheet/: Continent_StrSheet_ENG.xml  Continent_StrSheet_INT.xml  Continent_StrSheet_KR.xml  Continent_StrSheet_RO.xml
tests/ECSTEsts/: CMakeLists.txt  main.cpp
tests/MathTests/: CMakeLists.txt  main.cpp
tests/MemoryManagementTests/: CMakeLists.txt  main.cpp
tests/ObjectPoolTests/: CMakeLists.txt  main.cpp
tests/ProtocolTests/: CMakeLists.txt  main.cpp
tests/ServiceTests/: CMakeLists.txt  main.cpp
tests/Shared/: CMakeLists.txt
tests/Shared/include/: ApplicationSetup.h
tests/Shared/private/: ApplicationSetup.cpp
tests/TCPAcceptorTests/: CMakeLists.txt  main.cpp
tests/TLSSyncTests/: CMakeLists.txt  main.cpp
tests/TLSTests/: CMakeLists.txt  main.cpp
tests/TaskTests/: CMakeLists.txt  main.cpp
tests/UtilsTests/: CMakeLists.txt  main.cpp
tests/WorkersTests/: CMakeLists.txt  main.cpp
